Init job scheduler module
