# flex/coordinator/gs_flex_coordinator/controllers/legacy_controller.py
@@ -5,10 +5,30 @@ from typing import Union
 
 from gs_flex_coordinator.core import client_wrapper
 from gs_flex_coordinator.core import handle_api_exception
+from gs_flex_coordinator.models.groot_dataloading_job_config import GrootDataloadingJobConfig  # noqa: E501
 from gs_flex_coordinator.models.groot_graph import GrootGraph  # noqa: E501
 from gs_flex_coordinator.models.groot_schema import GrootSchema  # noqa: E501
 from gs_flex_coordinator.models.schema_mapping import SchemaMapping  # noqa: E501
 from gs_flex_coordinator import util
+
+
+def create_groot_dataloading_job(graph_name, groot_dataloading_job_config):  # noqa: E501
+    """create_groot_dataloading_job
+
+     # noqa: E501
+
+    :param graph_name:
+    :type graph_name: str
+    :param groot_dataloading_job_config:
+    :type groot_dataloading_job_config: dict | bytes
+
+    :rtype: Union[str, Tuple[str, int], Tuple[str, int, Dict[str, str]]
+    """
+    if connexion.request.is_json:
+        groot_dataloading_job_config = GrootDataloadingJobConfig.from_dict(connexion.request.get_json())  # noqa: E501
+    return client_wrapper.create_groot_dataloading_job(
+        graph_name, groot_dataloading_job_config
+    )
 
 
 @handle_api_exception()
