# flex/coordinator/gs_flex_coordinator/models/__init__.py
@@ -21,6 +21,8 @@ from gs_flex_coordinator.models.edge_type_vertex_type_pair_relations_inner impor
 from gs_flex_coordinator.models.edge_type_vertex_type_pair_relations_inner_x_csr_params import EdgeTypeVertexTypePairRelationsInnerXCsrParams
 from gs_flex_coordinator.models.graph import Graph
 from gs_flex_coordinator.models.graph_stored_procedures import GraphStoredProcedures
+from gs_flex_coordinator.models.groot_dataloading_job_config import GrootDataloadingJobConfig
+from gs_flex_coordinator.models.groot_dataloading_job_config_edges_inner import GrootDataloadingJobConfigEdgesInner
 from gs_flex_coordinator.models.groot_edge_type import GrootEdgeType
 from gs_flex_coordinator.models.groot_edge_type_relations_inner import GrootEdgeTypeRelationsInner
 from gs_flex_coordinator.models.groot_graph import GrootGraph
